fix align

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,9 +10,13 @@ ul {
   padding-left: 1.2em;
 }
 
+.divwidth {
+  width: 100%;
+}
 .spanhead {
   background-color: #e5dcc3;
   width: 100%;
+  text-align: right;
 }
 
 .addSign {
